feat: Rework SubmitHandler and UnsubmitHandler. - Removed 'event' argument from both commands. (One event should only ever be ran.) - Unsubmit now obtains the valid unsubmittable options for the current event.